# model/request/destination_and_polyline_request.go
@@ -3,7 +3,7 @@ package request
 import "github.com/Jocerdikiawann/server_share_trip/model/entity"
 
 type DestinationAndPolylineRequest struct {
-	GoogleId     string       `validate:"required"`
-	Destination  entity.Point `validate:"required"`
-	EncodedRoute string       `validate:"required"`
+	GoogleId     string       `json:"googleId" bson:"googleId,omitempty" validate:"required"`
+	Destination  entity.Point `json:"destination" bson:"destination,omitempty" validate:"required"`
+	EncodedRoute string       `json:"encodedRoute" bson:"encodedRoute,omitempty" validate:"required"`
 }
