# repository/route_repository_impl.go
@@ -8,7 +8,6 @@ import (
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 	"go.mongodb.org/mongo-driver/mongo"
-	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
 type RouteRepositoryImpl struct {
@@ -21,40 +20,19 @@ func NewRouteRepository(db *mongo.Database) *RouteRepositoryImpl {
 	}
 }
 
-func (repo *RouteRepositoryImpl) WatchLocation(id string) (stream *mongo.ChangeStream, err error) {
-	pipeline := mongo.Pipeline{
-		bson.D{
-			{
-				Key: "$match", Value: bson.D{
-					{Key: "operationType", Value: "insert"},
-					{Key: "fullDocument.googleid", Value: bson.D{
-						{Key: "$eq", Value: id},
-					}},
-				},
-			},
-		},
-	}
-
-	options := options.ChangeStream().SetFullDocument(options.Default)
-	stream, err = repo.db.Collection("location").Watch(context.Background(), pipeline, options)
-	return
-}
-
-func (repo *RouteRepositoryImpl) GetDestinationAndPolyline(context context.Context, id string) (destination entity.Destination, err error) {
+func (repo *RouteRepositoryImpl) GetDestinationAndPolyline(context context.Context, id string) (entity.Destination, error) {
+	var destination entity.Destination
 	objId, err := primitive.ObjectIDFromHex(id)
 	filter := bson.M{
 		"_id": objId,
 	}
 
-	err = repo.db.Collection("destination").FindOne(context, filter).Decode(&destination)
-	return
-}
+	if err != nil {
+		return destination, err
+	}
 
-func (repo *RouteRepositoryImpl) SendLocation(context context.Context, request request.LocationRequest) (id string, err error) {
-	result, err := repo.db.Collection("location").InsertOne(context, request)
-
-	id = result.InsertedID.(primitive.ObjectID).Hex()
-	return
+	errDb := repo.db.Collection("destination").FindOne(context, filter).Decode(&destination)
+	return destination, errDb
 }
 
 func (repo *RouteRepositoryImpl) SendDestinationAndPolyline(context context.Context, request request.DestinationAndPolylineRequest) (id string, err error) {
